Fix visibility of setting bar

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -49,6 +49,7 @@ body:before {
 
 .settings-hidden {
     opacity: 0;
+    visibility: hidden;
 }
 
 .settings__container {
